mule-sdk/v/1.0/multi-level-metadata.adoc
= 多级元数据

想象一下，您的最终用户将使用调用服务提供的操作的操作。要知道动作需要的元数据作为参数或返回的元数据，您需要区分服务和要执行的动作。您可以使用元数据键ID进行此操作。对于这些情况，元数据键ID不需要是单个`String`。它可以包含捆绑在复杂参数中的多个部分，该参数包含解析元数据所需的信息。

== 实现多级元数据密钥

// TODO：在此处继续COPYEDIT
必须有一个指定元数据键的参数的顺序，从1开始。返回上面的示例，最终用户将首先指定服务字段，然后指定要调用的操作。所以，服务参数会
有`order` 1和动作参数`order` 2。

表示`MetadataKeyId`的POJO的所有参数都必须使用为其设置`order`值的`@MetadataKeyPart`注释进行注释。这些带注释的字段必须是`String`类型。

这是一个元数据键ID类的例子：

[source, java, linenums]
----
public class ActionIdentifier{

  @Parameter
  @MetadataKeyPart(order = 1) // <1>
  private String service;

  @Parameter
  @MetadataKeyPart(order = 2) // <1>
  private String action;

  @Override
  public String getService() {
    return service;
  }

  @Override
  public String getAction() {
    return action;
  }

  @Override
  public void setService(String service) {
    this.service = service;
  }

  @Override
  public void setAction(String action) {
    this.action = action;
  }
}
----

下一个示例显示使用复杂类型的`MetadataKeyId`的操作：

[source, java, linenums]
----
@OutputResolver(output = OutputOperationTypeResolver.class)
public Object invoke( @ParameterGroup(name = "Operation") @MetadataKeyId(OperationTypeKeysResolver.class) ActionIdentifier identifier,
                      @TypeResolver(InputOperationTypeResolver.class) Map<String, Object> args){
  return invokeAction(identifier.getService(), identifier.getAction(), args);
}
----

接下来是返回每个可用`MetadataKey`的{​​{0}}的示例：

[source, java, linenums]
----
public class OperationTypeKeysResolver implements TypeKeysResolver {

  @Override
  public Set<MetadataKey> getKeys(MetadataContext context) throws MetadataResolvingException, ConnectionException {
    Set<MetadataKey> keys = new HashSet<>();
    for(String service : getServices()){
      MetadataKeyBuilder key = MetadataKeyBuilder.newKey(service);
      for(String action : getActions(service)){
        key.withChild(MetadataKeyBuilder.newKey(action).build());
      }
      keys.add(key.build());
    }
    return keys;
  }
}
----

[source, java, linenums]
----
public class OutputOperationTypeResolver implements OutputTypeResolver<ActionIdentifier>{

  @Override
  public MetadataType getOutputType(MetadataContext context, ActionIdentifier key)
     throws MetadataResolvingException, ConnectionException {
     // Resolve the output metadata using the ActionIdentifier
  }
}
----

[source, java, linenums]
----
public class InputOperationTypeResolver implements {

  @Override
  public MetadataType getInputMetadata(MetadataContext context, ActionIdentifier key)
    throws MetadataResolvingException, ConnectionException {
    // Resolve the input metadata using the ActionIdentifier
  }

}
----

== 部分提取

*Available since version 1.1*

获得每个`MetadataKey`的过程可能非常耗时。在获取每项服务的所有可能服务和操作的示例中，您提取的信息甚至可能位于另一台服务器上。

部分提取使您可以在此时解析MetadataKey树的一个级别。

`TypeKeysResolver`中的`getKeys`方法将仅返回每棵树的第一层，而不是每个`MetadataKey`的完整树。

在这种情况下，所需信息量大大减少。你只需要获得可能的服务。一旦选择服务，您需要提供
`MetadataKey`树的下一个级别。

为了实现这一点，您的关键解析器必须实现`PartialTypeKeysResolver`，例如：

[source, java, linenums]
----
public class OperationTypeKeysResolver implements PartialTypeKeysResolver<ActionIdentifier> {

  @Override
  public Set<MetadataKey> getKeys(MetadataContext context) throws MetadataResolvingException, ConnectionException {
    Set<MetadataKey> keys = new HashSet<>();
    for(String service : getServices()){ // <1>
      MetadataKeyBuilder key = MetadataKeyBuilder.newKey(service);
      keys.add(key.build());
    }
    return keys;
  }

  @Override
  public MetadataKey resolveChilds(MetadataContext metadataContext, ServiceOperation key)
      throws MetadataResolvingException, ConnectionException {

    if(key.getService() == null){
      throw new MetadataResolvingException("Missing Service name. Cannot resolve Actions without a service",
                                         FailureCode.INVALID_METADATA_KEY);
    }

    MetadataKeyBuilder key = MetadataKeyBuilder.newKey(key.getService()); // <2>
    for(String action : getActions(key.getService())){
      key.withChild(MetadataKeyBuilder.newKey(action).build()); // <3>
    }
    return key;
  }

}
----

<1>仅检索服务。服务的操作将根据需要进行检索。
<2>使用新的完整级别的元数据构建单个`MetadataKey`树，在这种情况下为动作级别。
<3>将该服务的操作添加为子项。

////
== 将用户输入用作部分级别

*Available since version 1.1*
////
